Fix #6404 : Version dropdown on download page doesn't scroll on overflow (Updated v1)

--- a/components/Common/Select/index.module.css
+++ b/components/Common/Select/index.module.css
@@ -59,6 +59,8 @@
 }
 
 .dropdown {
+  @apply max-h-48
+    overflow-y-auto;
   @apply max-w-xs
     overflow-hidden
     rounded-md
